Bug 85554, xml-stylesheet PI should work only in prolog. r=peterv, sr=jst.